<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HeyLo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_formulario">HeyLo</string>
    <string name="title_activity_map">HeyLo</string>
    <string name="validation_description">Invalid Description - 1 character minimum</string>
    <string name="description">"Description: "</string>
    <string name="address">"Address: "</string>
    <string name="radius">"Radius: "</string>
    <string name="desc_raio">1000 = 1km</string>
    <string name="desc_address">e g.(Av. Boulevard Castilhos Franca, 707)</string>
    <string name="desc_description">e g.(Home)</string> 
    
   
</resources>
